[sms] Restore compatibility with current Android release

The current code requires the multitarget support. This is only available in the yet-to-be-released Android version.
Fall back to the old style packet format as a quick fix for 20.08 before we can implement a proper solution in master.

BUG: 427266